change config for rails development

--- a/_vim/rc/dein.toml
+++ b/_vim/rc/dein.toml
@@ -71,4 +71,10 @@ repo = 'vim-scripts/AnsiEsc.vim'
 [[plugins]]
 repo = 'bronson/vim-trailing-whitespace'
 
+[[plugins]]
+repo = 'vim-scripts/taglist.vim'
+
+[[plugins]]
+repo = 'Shougo/neocomplcache.vim'
+
 
